--- a/public/index1.html
+++ b/public/index1.html
@@ -997,7 +997,7 @@ async function searchMusic(query) {
 
     try {
         const res = await fetch(
-            `https://cors.isomorphic-git.org/https://aliicia.my.id/api/music?alicia=${encodeURIComponent(query)}`
+            `https://aliicia.my.id/api/music?alicia=${encodeURIComponent(query)}`
         );
         const data = await res.json();
 
@@ -1051,7 +1051,7 @@ async function playTrack(index) {
 
     try {
         const res = await fetch(
-            `https://cors.isomorphic-git.org/https://aliicia.my.id/api/music?download=${encodeURIComponent(track.url)}`
+            `https://aliicia.my.id/api/music?download=${encodeURIComponent(track.url)}`
         );
         const data = await res.json();
 
@@ -1155,7 +1155,7 @@ async function playTrack(index) {
         async function loadLyrics(title) {
             lyricsContent.textContent = 'Loading lirik...';
             try {
-                const response = await fetch(`https://cors.isomorphic-git.org/https://aliicia.my.id/api/lyrics?search=${encodeURIComponent(title)}`);
+                const response = await fetch(`https://aliicia.my.id/api/lyrics?search=${encodeURIComponent(title)}`);
                 const data = await response.json();
                 lyricsContent.textContent = data.result || 'Lirik tidak ditemukan';
             } catch (error) {
